--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "resend" : "*",
+    "node-cron" : "*",
     "sendx-javascript-sdk" : "*"
   },
   "devDependencies": {
